--- a/galaxies_decals.ipynb
+++ b/galaxies_decals.ipynb
@@ -382,7 +382,7 @@
     "id": "e8a65c79-2dae-4530-b9a5-458b23176b6f"
    },
    "source": [
-    "<img src=\"https://www.nasa.gov/images/content/188404main_hurt_Milky_Way_2005-590_lg.jpg\" width=300>"
+    "<img src=\"https://d2pn8kiwq2w21t.cloudfront.net/original_images/jpegPIA10748.jpg\" width=300>"
    ]
   },
   {
@@ -392,7 +392,7 @@
     "id": "76b38229-eb80-4076-892c-0110d95460a9"
    },
    "source": [
-    "## Bonus task: Genereate new images that look like the Milky Way"
+    "# Task: Genereate new images that look like the Milky Way"
    ]
   }
  ],
